Updated some files + texpack.tex -> exbankpack.tex. See changelog.

--- a/exercises/secondexercise.tex
+++ b/exercises/secondexercise.tex
@@ -14,6 +14,7 @@ SOLUTION2
 
 \begin{problem}
   \lipsum[1]
+\pplabel{TST}
   \begin{verbatim}
     VERBATIMTEXT3
   \end{verbatim}
@@ -22,7 +23,7 @@ SOLUTION3
 \end{solution}
 \end{problem}
 \begin{problem}
-  \lipsum[2-3]
+  \ppref{TST}\lipsum[2-3]
 \end{problem}
 \begin{solution}
 SOLUTION4
