--- a/exercises/thirdexercise.tex
+++ b/exercises/thirdexercise.tex
@@ -1,8 +1,9 @@
 %!TEX root = ../example.tex
 \begin{intro}
-Problem intro for thirdexercise  
+Problem intro for thirdexercise
 \end{intro}
 \begin{problem}
+\pptag{TST}
   3rd TEST1
 \end{problem}
 \begin{problem}
