--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -2,35 +2,38 @@
 \newversion{v0.0.2b11 2018/04/02}
   \change{Updated documentation syntax.}
 \newversion{v0.0.3b38 2018/04/03}\nobreak
-    \change{ Updated triggers doc}
-    \change{ added trigger \dac{VeryBeginPartproblem}}
+    \change{Updated triggers doc}
+    \change{added trigger \dac{VeryBeginPartproblem}}
 
 \newversion{v0.0.3b40 2018/04/03}
-    \change{ Added examples that uses the \dac{At} command.}
-    \change{ Making front page and other snacks}
+    \change{Added examples that uses the \dac{At} command.}
+    \change{Making front page and other snacks}
 
 \newversion{v0.0.4b44 2018/04/03}
-    \change{ Changed design of part problems. (Looks much better now!)}
+    \change{Changed design of part problems. (Looks much better now!)}
 
 \newversion{v0.0.5b46 2018/04/03}
-    \change{ Fixed partproblems and solutions to fit on pages using \dac{filbreak}.}
+    \change{Fixed partproblems and solutions to fit on pages using \dac{filbreak}.}
 
 \newversion{v0.1.0 2018/04/08}
-    \change{ Fixed title of documentation to match actual package.}
-    \change{ Fixed weird paragraph styling when displaying solutions}
-    \change{ Added a few package options. More to come!}
+    \change{Fixed title of documentation to match actual package.}
+    \change{Fixed weird paragraph styling when displaying solutions}
+    \change{Added a few package options. More to come!}
 
 \newversion{v0.1.1 2018/04/13}
-  \change{ Added \dac{exec}, which allows the user to execute macros between problems}
-  \change{ Bug fix: \dac{At} would cause crash due to latexmk multiple builds}
-  \change{ Bug fix: \dac{sprite} wouldn't build correctly}
-  \change{ Bug fix: misc bugs involving \dac{makeset}, \dac{buildset}, nohead and \dac{phead}}
+  \change{Added \dac{exec}, which allows the user to execute macros between problems}
+  \change{Bug fix: \dac{At} would cause crash due to latexmk multiple builds}
+  \change{Bug fix: \dac{sprite} wouldn't build correctly}
+  \change{Bug fix: misc bugs involving \dac{makeset}, \dac{buildset}, nohead and \dac{phead}}
 
 \newversion{v0.1.2 2018/04/17}
-    \change{ Fixed bug that \dac{select} and \dac{exclude} not working as expected.}
-    \change{ Added \dac{ShowNumbers} for displaying numbers related to use in \dac{select} and \dac{exclude}}
+    \change{Fixed bug that \dac{select} and \dac{exclude} not working as expected.}
+    \change{Added \dac{ShowNumbers} for displaying numbers related to use in \dac{select} and \dac{exclude}}
 
 \newversion{v0.1.3 2018/04/20}
-    \change{ Added custom dynamic figure path \refKey{figure root directory}.}
-    \change{ Fixed bugs related to \dac{phead} and the commands used in \dac{makeset}-lists.}
+    \change{Added custom dynamic figure path \refKey{figure root directory}.}
+    \change{Fixed bugs related to \dac{phead} and the commands used in \dac{makeset}-lists.}
+\newversion{@@VERISION @@DATE}
+    \change{Introduced solutions only: \dac{SolutionsOnly}, but it needs fixing before it's added to API}
+    \change{Fixed paragraph tightening when displaying solutions}
 \chlogtable
