--- a/src/setbuilder.tex
+++ b/src/setbuilder.tex
@@ -103,22 +103,25 @@
 %: \!begin{marker}If \sprite is used, it should be the only command in \begin{document}\end{document}\!end{marker}
 %:-
 \newcommand\sprite[1][4]{
-\exercisebanksetup{part problem header={\Large\textbf{\thepartproblemcounter}}}
+% \exercisebanksetup{part problem header={\Large\textbf{\thepartproblemcounter}}}
 \squeeze
 \gdef\@spriteMode{\isTrue}
 \long\def\about##1{{\Large\textbf{About}:\\[1.1em]##1\\[1.5em]}}
 \pgfpagesuselayout{#1 on 1}[a4paper,border shrink=5mm]
 \ifnum\pdfstrcmp{\exbank@spriteSets}{\emptyList}=\z@\relax%
-  \edef\@thelist{\ea\@secondoftwo\@listOfSets}
-  \foreach \set in \@thelist{
+  \edef\sprite@setlist{\ea\@secondoftwo\@listOfSets}
+  %readlist with star removes whitespaces in the items
+  \readlist*\list@sprite@setlist\sprite@setlist
+  \foreachitem\set\in\list@sprite@setlist{
     \edef\theset{{\set}}
     \if\theset\empty\relax\else%
     \buildset{\set}%
     \fi%
   }
 \else
-  \edef\@thelist{\exbank@spriteSets}
-  \foreach \set in \@thelist{
+  \edef\sprite@setlist{\exbank@spriteSets}
+  \readlist*\list@sprite@setlist\sprite@setlist
+  \foreachitem\set\in\list@sprite@setlist{
     \edef\theset{{\set}}
     \if\theset\empty\relax\else%
     \buildex{\set}%
@@ -201,6 +204,12 @@
 %:E.g. to insert a new page in between two problems when using nohead:
 %:!\makeset[nohead]{2}{\phead,my/exercise,\exec{\clearpage},next/exercise}
 %:-
+%---- Protectors: ----%
+%% \ex@protect:
+%% \def\hello{\exec{\textbf{world}}} ~> :\noexpand{\textbf{world}}
+%% Then when it's tested
+%% \let\ex@protect\unexpanded
+%% \edef\hello{\hello} ~> :\textbf{world}
 \global\let\ex@protect\noexpand
 \gdef\exec#1{:\ex@protect{#1}}
 %%Logic for building a set
@@ -232,7 +241,7 @@
   %% Sets the current setlist from the variable
   %% generated in makeset
   \let\exlist@protect\unexpanded
-  \edef\setlist{\csname setlist@#2\endcsname}
+  \edef\exbank@setlist{\csname setlist@#2\endcsname}
   \let\exlist@protect\noexpand
   \if\@spriteMode\isFalse
     \Trigger\StartBuildset
@@ -279,8 +288,8 @@
     \def\continueLoop{\isFalse}\@dlog{Executing custom command}\bgroup
   }
 %% Loop through list
-  \foreach \exerciseFileInfo in \setlist{
-
+  \readlist*\setlist\exbank@setlist
+  \foreachitem\exerciseFileInfo\in\setlist{
     \def\continueLoop{\isTrue}
     %% ppList is \emptyList (0) if it's not a list
     \gdef\ppList{\emptyList}
