--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -6,7 +6,7 @@
     \change{added trigger \dac{VeryBeginPartproblem}}
 
 \newversion{v0.0.3b40 2018/04/03}
-    \change{Added examples that uses the \dac{At} command.}
+    \change{Added examples that uses the \refCom{At} command.}
     \change{Making front page and other snacks}
 
 \newversion{v0.0.4b44 2018/04/03}
@@ -21,19 +21,24 @@
     \change{Added a few package options. More to come!}
 
 \newversion{v0.1.1 2018/04/13}
-  \change{Added \dac{exec}, which allows the user to execute macros between problems}
-  \change{Bug fix: \dac{At} would cause crash due to latexmk multiple builds}
-  \change{Bug fix: \dac{sprite} wouldn't build correctly}
-  \change{Bug fix: misc bugs involving \dac{makeset}, \dac{buildset}, nohead and \dac{phead}}
+  \change{Added \refCom{exec}, which allows the user to execute macros between problems}
+  \change{Bug fix: \refCom{At} would cause crash due to latexmk multiple builds}
+  \change{Bug fix: \refCom{sprite} wouldn't build correctly}
+  \change{Bug fix: misc bugs involving \refCom{makeset}, \refCom{buildset}, nohead and \refCom{phead}}
 
 \newversion{v0.1.2 2018/04/17}
-    \change{Fixed bug that \dac{select} and \dac{exclude} not working as expected.}
-    \change{Added \dac{ShowNumbers} for displaying numbers related to use in \dac{select} and \dac{exclude}}
+    \change{Fixed bug that \refCom{select} and \refCom{exclude} not working as expected.}
+    \change{Added \refCom{ShowNumbers} for displaying numbers related to use in \refCom{select} and \refCom{exclude}}
 
 \newversion{v0.1.3 2018/04/20}
     \change{Added custom dynamic figure path \refKey{figure root directory}.}
-    \change{Fixed bugs related to \dac{phead} and the commands used in \dac{makeset}-lists.}
+    \change{Fixed bugs related to \refCom{phead} and the commands used in \refCom{makeset}-lists.}
 \newversion{@@VERISION @@DATE}
-    \change{Introduced solutions only: \dac{SolutionsOnly}, but it needs fixing before it's added to API}
+    \change{Introduced solutions only: \refCom{SolutionsOnly}, but it needs fixing before it's added to API}
     \change{Fixed paragraph tightening when displaying solutions}
+    \change{Introduced \refCom{DeclareExerciseCommand}}
+    \change{Fixed bug with \refCom{exec}}
+    \change{Iteration over items now uses a more lighweight approach.}
+    \change{For commands that takes `lists' as arguments (\refCom{makeset}, \refCom{select} and \refCom{exclude}), the last item of the list can be terminated with new line or spaces without problems.}
+    \change{For commands that takes `lists' as arguments, the entries in the list are now trimmed whitespaces on both sides.}
 \chlogtable
