--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -34,11 +34,12 @@
     \change{Added custom dynamic figure path \refKey{figure root directory}.}
     \change{Fixed bugs related to \refCom{phead} and the commands used in \refCom{makeset}-lists.}
 \newversion{@@VERISION @@DATE}
-    \change{Introduced solutions only: \refCom{SolutionsOnly}, but it needs fixing before it's added to API}
+    % \change{Introduced solutions only: \refCom{SolutionsOnly}}
     \change{Fixed paragraph tightening when displaying solutions}
     \change{Introduced \refCom{DeclareExerciseCommand}}
     \change{Fixed bug with \refCom{exec}}
     \change{Iteration over items now uses a more lighweight approach.}
     \change{For commands that takes `lists' as arguments (\refCom{makeset}, \refCom{select} and \refCom{exclude}), the last item of the list can be terminated with new line or spaces without problems.}
     \change{For commands that takes `lists' as arguments, the entries in the list are now trimmed whitespaces on both sides.}
+    \change{Fixed bug where \refCom{ppref} did not reference letter in part problem.}
 \chlogtable
